--- a/dlink-modem-page/backend/package.json
+++ b/dlink-modem-page/backend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "start": "ts-node index.ts",
     "dev": "nodemon --watch '**/*' --ignore 'node_modules/' -e 'ts' --exec 'ts-node' index.ts",
-    "seed:init": "ts-node ./src/seeds/init.ts"    
+    "seed:init": "ts-node ./src/seeds/init.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +18,9 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.39",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "nodemon": "^2.0.16",
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.22",
     "typescript": "^4.7.3"
   },
   "devDependencies": {
