--- a/dlink-modem-page/backend/package.json
+++ b/dlink-modem-page/backend/package.json
@@ -17,8 +17,10 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.39",
+    "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "i18n": "^0.15.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22",
     "typescript": "^4.7.3"
