--- a/dlink-modem-page/package.json
+++ b/dlink-modem-page/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
     "framer-motion": "^10.16.1",
     "i18next": "^23.4.5",
