--- a/dlink-modem-page/package.json
+++ b/dlink-modem-page/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.1",
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
     "framer-motion": "^10.16.1",
     "i18next": "^23.4.5",
@@ -46,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/mysql": "^2.15.21"
   }
 }
