--- a/dlink-modem-page/package.json
+++ b/dlink-modem-page/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "framer-motion": "^10.16.1",
     "i18next": "^23.4.5",
